@@ -1,6 +1,6 @@
 {
-  "count": 313,
-  "uniques": 1,
+  "count": 324,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-03-21T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 18,
-      "uniques": 1
+      "count": 29,
+      "uniques": 2
     }
   ]
 }
