@@ -1,3 +1,9 @@
+2022-04-02T00:32:45Z:
+* notice: last 14d: all unq: 324 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 859 46
+* notice: next accum: outdated-all outdated-unq / all unq: 546 35 / 870 47
+* notice: prev json diff // prev day diff: unq all: +1 +11 / -0 -0 // +1 +11 / -0 -0
+
 2022-04-01T16:09:23Z:
 * notice: last 14d: all unq: 313 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 853 46
